	  the Windows native build.
	* Makefile.unix:  The existing top-level Makefile has been renamed
	  Makefile.unix.
	* Makefile:  This is a new top-level Makefile that just includes
	  either Makefile.unix or Makefile.win
	* configs/stm3240g-eval/src:  Qencoder fixes from Ryan Sundberg.
	* arch/arm/src/stm32/stm32_qencoder.c: TIM3 bug fix from Ryan Sundberg.
	* tools/mkromfsimg.sh: Correct typo in an error message (Ryan Sundberg)
	* arch/*/src/Makefile:  Remove tftboot install and creation of System.map
	  for Windows native build.  The fist is necessary, the second just needs
	  re-implemented.
	* configs/mirtoo: Update Mirtoo pin definitions for Release 2.  Provided
	  by Konstantin Dimitrov.
	* Fixed an uninitialized variable in the file system that can cause 
	  assertions if DEBUG on (contributed by Lorenz Meier).
	* Config.mk:  Defined DELIM to be either / or \, depending upon
	  CONFIG_WINDOWS_NATIVE.  This will allow me to eliminate a lot of
	  conditional logic elsewhere.
	* nuttx/graphics: One a mouse button is pressed, continue to report all
	  mouse button events to the first window that received the the initial
	  button down event, even if the mouse attempts to dray outside the
	  window. From Petteri Aimonen.
	* nuttx/graphics/nxmu/nx_block.c:  One more fixe to the NX block message
	  logic from Petteri Aimonen.
	* include/nuttx/wqueue.h: Some basic definitions to support a user-
	  space work queue (someday in the future).
	* graphics/nxmu:  Add semaphores so buffers messages that send buffers
	  will block until the buffer data has been acted upon.
	* graphics/nxmw:  Extended the blocked messages to cover mouse movement
	  and redraw events.  These will also cause problems if sent to a window
	  while it is closing.
	* arch/several:  Change UARTs are enabled for i.MX, LM3S, ez80, and M16C to
	  match how they are enabled for other architectures.
	* configs/ez80f910200kitg:  Convert to use mconf configuration.
